# bezierpp

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  License.md  Readme.md
.github/workflows/: main.yml
cmake/: Version.cmake
samples/: bezierpp_eigen.cpp  bezierpp_qt.cpp
src/bezierpp/: bezierpp.hpp  qt.hpp
